[tool.poetry]
name = "geo-analisys"
version = "0.1.0"
description = "A repository with analyzes of spatial data from the state of Espirito Santo-Brazil"
authors = ["Ezequiel Schneider Reinholtz"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^0.14.2"
matplotlib = "^3.8.2"
descartes = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
